--- a/.github/workflows/clang-tools-4_macosx-amd64.yml
+++ b/.github/workflows/clang-tools-4_macosx-amd64.yml
@@ -2,7 +2,7 @@ name: clang-tools-4_macosx-amd64
 
 on:
   push:
-    branches: [ master ]
+    branches: [ gcc10-ub2004 ]
 
 jobs:
   build-and-deploy:
